# Rust-Chat-App-using-gRPC-streaming

./: Cargo.toml  README.md  build.rs
proto/: chat.proto
src/: client.rs  main.rs  server.rs
